--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">ReingTestApp</string>
+    <string name="app_name">RingTestApp</string>
+    <string name="about">About</string>
+
+    <!-- Transitions -->
+    <string name="fab_dialog_transition_name">transition.fab</string>
+    <string name="transition_tag_dot">transition.dot</string>
+    <string name="transition_tag_title">transition.title</string>
+    <string name="transition_tag_dot_indexed">transition.dot%1$d</string>
+    <string name="transition_tag_title_indexed">transition.title%1$d</string>
+    <string name="transition_tag_image_named">transition.image%1$s</string>
+    <string name="transition_tag_title_named">transition.title%1$s</string>
 </resources>
